welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value estSurBisuit
def continu(){for (i<-1 to 7){do{avance;}while(!estSurBisuit)}}//programme d'avance
                                                ^Program:5: error: not found: value estSurBisuit
while(!estSurBisuit()){
       ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBisuit()){
^