welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit = false;
def continu(){for (i<-1 to 7){do{avance;}while(!estSurBisuit)}}//programme d'avance
while(!estSurBisuit()){
	continu()
}
}
